--- a/regression_output.html
+++ b/regression_output.html
@@ -1,50 +1,50 @@
 
-<table style="text-align:center"><tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"></td><td colspan="4"><em>Dependent variable:</em></td></tr>
-<tr><td></td><td colspan="4" style="border-bottom: 1px solid black"></td></tr>
-<tr><td style="text-align:left"></td><td colspan="4">pervote</td></tr>
-<tr><td style="text-align:left"></td><td>(1)</td><td>(2)</td><td>(3)</td><td>(4)</td></tr>
-<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">EU (Positive)</td><td>2.352<sup>*</sup></td><td>-0.660</td><td></td><td></td></tr>
-<tr><td style="text-align:left"></td><td>(1.314)</td><td>(1.519)</td><td></td><td></td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">EU (Negative)</td><td>1.989<sup>**</sup></td><td>1.187</td><td></td><td></td></tr>
-<tr><td style="text-align:left"></td><td>(0.842)</td><td>(0.853)</td><td></td><td></td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Immigration (Negative)</td><td>1.922<sup>***</sup></td><td></td><td>2.038<sup>***</sup></td><td></td></tr>
-<tr><td style="text-align:left"></td><td>(0.595)</td><td></td><td>(0.591)</td><td></td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Immigration (Positive)</td><td>-0.159</td><td></td><td>0.084</td><td></td></tr>
-<tr><td style="text-align:left"></td><td>(0.534)</td><td></td><td>(0.325)</td><td></td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Integration</td><td>2.338</td><td></td><td></td><td>1.021</td></tr>
-<tr><td style="text-align:left"></td><td>(1.445)</td><td></td><td></td><td>(1.233)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Assimilation</td><td>0.231</td><td></td><td></td><td>0.767<sup>**</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.363)</td><td></td><td></td><td>(0.307)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Post Policy</td><td>0.349</td><td>0.092</td><td>0.833</td><td>-0.892</td></tr>
-<tr><td style="text-align:left"></td><td>(1.516)</td><td>(1.467)</td><td>(1.326)</td><td>(1.636)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">EU (Positive)*Post</td><td>-2.662<sup>*</sup></td><td>0.191</td><td></td><td></td></tr>
-<tr><td style="text-align:left"></td><td>(1.371)</td><td>(1.470)</td><td></td><td></td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">EU (Negative)*Post</td><td>-1.349</td><td>0.140</td><td></td><td></td></tr>
-<tr><td style="text-align:left"></td><td>(1.456)</td><td>(1.028)</td><td></td><td></td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Immigration (Negative)*Post</td><td>0.645</td><td></td><td>-1.090<sup>***</sup></td><td></td></tr>
-<tr><td style="text-align:left"></td><td>(0.705)</td><td></td><td>(0.320)</td><td></td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Immigration (Positive)*Post</td><td>0.479</td><td></td><td>-0.311</td><td></td></tr>
-<tr><td style="text-align:left"></td><td>(0.632)</td><td></td><td>(0.588)</td><td></td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Integration*Post</td><td>-1.377</td><td></td><td></td><td>-0.009</td></tr>
-<tr><td style="text-align:left"></td><td>(2.129)</td><td></td><td></td><td>(1.564)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Assimilation*Post</td><td>-0.620</td><td></td><td></td><td>-0.060</td></tr>
-<tr><td style="text-align:left"></td><td>(0.507)</td><td></td><td></td><td>(0.426)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>52</td><td>52</td><td>52</td><td>52</td></tr>
-<tr><td style="text-align:left">R<sup>2</sup></td><td>0.765</td><td>0.236</td><td>0.423</td><td>0.307</td></tr>
-<tr><td style="text-align:left">Adjusted R<sup>2</sup></td><td>0.077</td><td>-0.855</td><td>-0.401</td><td>-0.684</td></tr>
-<tr><td style="text-align:left">F Statistic</td><td>3.249<sup>**</sup> (df = 13; 13)</td><td>1.299 (df = 5; 21)</td><td>3.082<sup>**</sup> (df = 5; 21)</td><td>1.857 (df = 5; 21)</td></tr>
-<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"><em>Note:</em></td><td colspan="4" style="text-align:right"><sup>*</sup>p<0.1; <sup>**</sup>p<0.05; <sup>***</sup>p<0.01</td></tr>
+<table style="text-align:center"><tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"></td><td colspan="5"><em>Dependent variable:</em></td></tr>
+<tr><td></td><td colspan="5" style="border-bottom: 1px solid black"></td></tr>
+<tr><td style="text-align:left"></td><td colspan="5">pervote</td></tr>
+<tr><td style="text-align:left"></td><td>(1)</td><td>(2)</td><td>(3)</td><td>(4)</td><td>(5)</td></tr>
+<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">EU (Positive)</td><td>2.352<sup>*</sup></td><td>-0.660</td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left"></td><td>(1.314)</td><td>(1.519)</td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">EU (Negative)</td><td>1.989<sup>**</sup></td><td>1.187</td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left"></td><td>(0.842)</td><td>(0.853)</td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Immigration (Negative)</td><td>1.922<sup>***</sup></td><td></td><td>2.038<sup>***</sup></td><td></td><td>2.024<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.595)</td><td></td><td>(0.591)</td><td></td><td>(0.539)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Immigration (Positive)</td><td>-0.159</td><td></td><td>0.084</td><td></td><td></td></tr>
+<tr><td style="text-align:left"></td><td>(0.534)</td><td></td><td>(0.325)</td><td></td><td></td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Integration</td><td>2.338</td><td></td><td></td><td>1.021</td><td></td></tr>
+<tr><td style="text-align:left"></td><td>(1.445)</td><td></td><td></td><td>(1.233)</td><td></td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Assimilation</td><td>0.231</td><td></td><td></td><td>0.767<sup>**</sup></td><td></td></tr>
+<tr><td style="text-align:left"></td><td>(0.363)</td><td></td><td></td><td>(0.307)</td><td></td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Post Policy</td><td>0.349</td><td>0.092</td><td>0.833</td><td>-0.892</td><td>0.341</td></tr>
+<tr><td style="text-align:left"></td><td>(1.516)</td><td>(1.467)</td><td>(1.326)</td><td>(1.636)</td><td>(0.973)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">EU (Positive)*Post</td><td>-2.662<sup>*</sup></td><td>0.191</td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left"></td><td>(1.371)</td><td>(1.470)</td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">EU (Negative)*Post</td><td>-1.349</td><td>0.140</td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left"></td><td>(1.456)</td><td>(1.028)</td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Immigration (Negative)*Post</td><td>0.645</td><td></td><td>-1.090<sup>***</sup></td><td></td><td>-1.046<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.705)</td><td></td><td>(0.320)</td><td></td><td>(0.293)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Immigration (Positive)*Post</td><td>0.479</td><td></td><td>-0.311</td><td></td><td></td></tr>
+<tr><td style="text-align:left"></td><td>(0.632)</td><td></td><td>(0.588)</td><td></td><td></td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Integration*Post</td><td>-1.377</td><td></td><td></td><td>-0.009</td><td></td></tr>
+<tr><td style="text-align:left"></td><td>(2.129)</td><td></td><td></td><td>(1.564)</td><td></td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Assimilation*Post</td><td>-0.620</td><td></td><td></td><td>-0.060</td><td></td></tr>
+<tr><td style="text-align:left"></td><td>(0.507)</td><td></td><td></td><td>(0.426)</td><td></td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>52</td><td>52</td><td>52</td><td>52</td><td>52</td></tr>
+<tr><td style="text-align:left">R<sup>2</sup></td><td>0.765</td><td>0.236</td><td>0.423</td><td>0.307</td><td>0.414</td></tr>
+<tr><td style="text-align:left">Adjusted R<sup>2</sup></td><td>0.077</td><td>-0.855</td><td>-0.401</td><td>-0.684</td><td>-0.299</td></tr>
+<tr><td style="text-align:left">F Statistic</td><td>3.249<sup>**</sup> (df = 13; 13)</td><td>1.299 (df = 5; 21)</td><td>3.082<sup>**</sup> (df = 5; 21)</td><td>1.857 (df = 5; 21)</td><td>5.422<sup>***</sup> (df = 3; 23)</td></tr>
+<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"><em>Note:</em></td><td colspan="5" style="text-align:right"><sup>*</sup>p<0.1; <sup>**</sup>p<0.05; <sup>***</sup>p<0.01</td></tr>
 </table>
