--- a/regression_output.html
+++ b/regression_output.html
@@ -36,7 +36,7 @@
 <tr><td style="text-align:left">Immigration (Positive)*Post</td><td>0.479</td><td></td><td>-0.311</td><td></td><td></td></tr>
 <tr><td style="text-align:left"></td><td>(0.632)</td><td></td><td>(0.588)</td><td></td><td></td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Integration*Post</td><td>-1.377</td><td></td><td></td><td>-0.009</td><td></td></tr>
+<tr><td style="text-align:left">Diversity*Post</td><td>-1.377</td><td></td><td></td><td>-0.009</td><td></td></tr>
 <tr><td style="text-align:left"></td><td>(2.129)</td><td></td><td></td><td>(1.564)</td><td></td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
 <tr><td style="text-align:left">Assimilation*Post</td><td>-0.620</td><td></td><td></td><td>-0.060</td><td></td></tr>
